cabal-version:      2.4
name:               countdown-problem-haskell
version:            0.1.0.0
synopsis:           Solution to the countdown problem

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Mateja Maric
maintainer:         mail@matejamaric.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable countdown-problem-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
